# FRPGame

./: .gitignore  2019-01-11.tidal  README.md  TransGame.cabal  TransGame.hp  boot.scd
src/: GameController.hs  GameLogic.hs  InitGameState.hs  InterfaceLogic.hs  Main.hs  Settings.hs  Utils.hs
src/GameLogic/: Collisions.hs  Movement.hs
src/GameObjs/: Coin.hs  Ghost.hs  Lamp.hs  Mixer.hs
src/Input/: Input.hs
src/Render/: Audio.hs  GlossInterface.hs  ImageIO.hs  Render.hs
src/Types/: Common.hs  GameObjs.hs  HasImage.hs  Image.hs  Interface.hs
